--- a/refs.bib
+++ b/refs.bib
@@ -15,39 +15,32 @@ language={English}
 
 @misc{w3c_web_service,
   title = {Web Service Description Requirements, W3C},
-  url = {http://www.w3.org/TR/ws-desc-reqs/},
   howpublished = {http://www.w3.org/TR/ws-desc-reqs/}
 },
 
 @misc{web_service_wiki,
   title = {Web Service, Wikipedia},
-  url = {http://en.wikipedia.org/wiki/Web_service},
   howpublished = {http://en.wikipedia.org/wiki/Web\_service}
 },
 
 @misc{web_service_protocols_wiki,
   title = {List of Web Service Protocols, Wikipedia},
-  url = {http://en.wikipedia.org/wiki/List_of_web_service_protocols},
   howpublished = {http://en.wikipedia.org/wiki/List\_of\_web\_service\_protocols}
 },
 @misc{soap_wiki,
   title = {SOAP, Wikipedia},
-  url = {http://en.wikipedia.org/wiki/SOAP},
   howpublished = {http://en.wikipedia.org/wiki/SOAP}
 },
 @misc{rest_wiki,
   title = {Representational state transfer, Wikipedia},
-  url = {https://en.wikipedia.org/wiki/Representational_state_transfer},
   howpublished = {https://en.wikipedia.org/wiki/Representational\_state\_transfer}
 },
 @misc{uddi_wiki,
   title = {Universal Description Discovery and Integration, Wikipedia},
-  url = {http://en.wikipedia.org/wiki/Universal\_Description\_Discovery\_and\_Integration},
   howpublished = {http://en.wikipedia.org/wiki/Universal\_Description\_Discovery\_and\_Integration}
 },
 @misc{facebook_release_note,
   title = {Platform Updates, Facebook},
-  url = {https://developers.facebook.com/blog/post/2013/05/22/platform-updates--operation-},
   howpublished = {https://developers.facebook.com/blog/post/2013/05/22/platform-updates--operation-}
 },
 
@@ -165,50 +158,42 @@ language={English}
 
 @misc{google_maps_versioning,
   title = {Google Developers},
-  url = {https://developers.google.com/maps/documentation/javascript/basics\#Versioning},
   howpublished = {https://developers.google.com/maps/documentation/javascript/basics\#Versioning}
 },
 
 @misc{google_maps_services,
   title = {Google Maps API Web Services},
-  url = {https://developers.google.com/maps/documentation/webservices/},
   howpublished = {https://developers.google.com/maps/documentation/webservices/}
 },
 
 @misc{google_maps_forum,
   title = {Google Maps API Web Services},
-  url = {https://developers.google.com/maps/documentation/webservices/forum},
   howpublished = {https://developers.google.com/maps/documentation/webservices/forum}
 },
 
 
 @misc{twitter_api,
   title = {The Twitter REST API, Twitter Developers},
-  url = {https://dev.twitter.com/docs/api},
   howpublished = {https://dev.twitter.com/docs/api}
 },
 
 @misc{twitter_calendar,
   title = {Calendar of API Changes, Twitter Developers},
-  url = {https://dev.twitter.com/calendar},
   howpublished = {https://dev.twitter.com/calendar}
 },
 
 @misc{twitter_console,
   title = {Exploring the Twitter API, Twitter Developers},
-  url = {https://dev.twitter.com/console},
   howpublished = {https://dev.twitter.com/console}
 },
 
 @misc{facebook_api,
   title = {Graph API, Facebook Developers},
-  url = {https://developers.facebook.com/docs/reference/api},
   howpublished = {https://developers.facebook.com/docs/reference/api}
 },
 
 @misc{facebook_stack_overflow,
   title = {Facebook, Stack Overflow},
-  url = {http://facebook.stackoverflow.com},
   howpublished = {http://facebook.stackoverflow.com}
 },
 
@@ -393,7 +378,6 @@ keywords={application program interfaces;computer science education;software eng
   year      = {2012},
   crossref  = {DBLP:conf/icsm/2012},
   timestamp = {Mon, 14 Jan 2013 14:23:29 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icsm/NasehiSMB12},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 },
 
@@ -414,7 +398,7 @@ keywords={application program interfaces;computer science education;software eng
 
 @inproceedings{Chen_who_asked,
  author = {Chen, Cong and Zhang, Kang},
- title = {Who Asked What: Integrating Crowdsourced FAQs into API Documentation},
+ title = {Who Asked What: Integrating Crowdsourced FAQs into {API} Documentation},
  booktitle = {Companion Proc. of the ACM International Conference on Software Engineering},
  series = {ICSE Companion 2014},
  year = {2014},
@@ -428,7 +412,7 @@ keywords={application program interfaces;computer science education;software eng
 
 @inproceedings{Subramanian_live,
  author = {Subramanian, Siddharth and Inozemtseva, Laura and Holmes, Reid},
- title = {Live API Documentation},
+ title = {Live {API} Documentation},
  booktitle = {Proceedings of the International Conference on Software Engineering},
  series = {ICSE 2014},
  year = {2014},
@@ -539,7 +523,7 @@ keywords={Web services;application program interfaces;hypermedia markup language
 },
 
 @article{scheller2015automated,
-  title={Automated measurement of API usability: The {API} Concepts Framework},
+  title={Automated measurement of {API} usability: The {API} Concepts Framework},
   author={Scheller, Thomas and K{\"u}hn, Eva},
   journal={Information and Software Technology},
   volume={61},
@@ -557,7 +541,7 @@ keywords={Web services;application program interfaces;hypermedia markup language
 },
 
 @inproceedings{zhu2014mining,
-  title={Mining api usage examples from test code},
+  title={Mining {API} usage examples from test code},
   author={Zhu, Zixiao and Zou, Yanzhen and Xie, Bing and Jin, Yong and Lin, Zeqi and Zhang, Lu},
   booktitle={Proc. of 2014 IEEE International Conference on Software Maintenance and Evolution (ICSME), },
   pages={301--310},
@@ -566,7 +550,7 @@ keywords={Web services;application program interfaces;hypermedia markup language
 },
 
 @inproceedings{wu2010codocent,
-  title={CoDocent: Support API usage with code example and API documentation},
+  title={CoDocent: Support {API} usage with code example and API documentation},
   author={Wu, Ye-Chi and Mar, Lee Wei and Jiau, Hewijin Christine},
   booktitle={Proc. of IEEE International Conference on Software Engineering Advances (ICSEA)},
   pages={135--140},
@@ -574,7 +558,7 @@ keywords={Web services;application program interfaces;hypermedia markup language
 },
 
 @article{maalej2013patterns,
-  title={Patterns of knowledge in API reference documentation},
+  title={Patterns of knowledge in {API} reference documentation},
   author={Maalej, Wiem and Robillard, Martin P},
   journal={Software Engineering, IEEE Transactions on},
   volume={39},
@@ -798,7 +782,7 @@ month={July},},
 
 @inproceedings{Duala-Ekoko:2012:AAQ:2337223.2337255,
  author = {Duala-Ekoko, Ekwa and Robillard, Martin P.},
- title = {Asking and Answering Questions About Unfamiliar APIs: An Exploratory Study},
+ title = {Asking and Answering Questions About Unfamiliar {APIs}: An Exploratory Study},
  booktitle = {Proceedings of the 34th International Conference on Software Engineering},
  series = {ICSE '12},
  year = {2012},
@@ -806,7 +790,6 @@ month={July},},
  location = {Zurich, Switzerland},
  pages = {266--276},
  numpages = {11},
- url = {http://dl.acm.org/citation.cfm?id=2337223.2337255},
  acmid = {2337255},
  publisher = {IEEE Press},
  address = {Piscataway, NJ, USA},
@@ -815,7 +798,7 @@ month={July},},
 @INPROCEEDINGS{6462686,
 author={L. Wang and Y. Zou and L. Fang and B. Xie and F. Yang},
 booktitle={2012 19th Asia-Pacific Software Engineering Conference},
-title={An Exploratory Study of API Usage Examples on the Web},
+title={An Exploratory Study of {API} Usage Examples on the Web},
 year={2012},
 volume={1},
 pages={396-405},
@@ -826,7 +809,7 @@ month={Dec},},
 @article{jiau,
 author={Jiau,Hewijin and Yang,Feng-Pu},
 year={2012},
-title={Facing up to the inequality of crowdsourced API documentation},
+title={Facing up to the inequality of crowdsourced {API} documentation},
 journal={ACM SIGSOFT Software Engineering Notes},
 volume={37},
 number={1},
@@ -840,7 +823,7 @@ language={English},
 @INPROCEEDINGS{5295283,
 author={J. Stylos and A. Faulring and Z. Yang and B. A. Myers},
 booktitle={2009 IEEE Symposium on Visual Languages and Human-Centric Computing (VL/HCC)},
-title={Improving API documentation using API usage information},
+title={Improving API documentation using {API} usage information},
 year={2009},
 pages={119-126},
 keywords={Java;application program interfaces;document handling;system documentation;API documentation;API usage information;Jadeite;application program interfaces;standard Javadoc;Aggregates;Displays;Documentation;Functional programming;Java;Performance evaluation;Programming profession;Search engines;Statistics;Usability},
@@ -851,7 +834,7 @@ month={Sept},},
 @INPROCEEDINGS{5609553,
 author={Seyed Mehdi Nasehi and F. Maurer},
 booktitle={2010 IEEE International Conference on Software Maintenance},
-title={Unit tests as API usage examples},
+title={Unit tests as {API} usage examples},
 year={2010},
 pages={1-10},
 keywords={application program interfaces;program testing;API unit tests;API usage examples;advanced usage scenarios;application programming interface;standard API documentation;Barium;Noise measurement;API;Code Example;Documentation;Unit Test;Usability},
@@ -861,7 +844,7 @@ month={Sept},},
 
 @inproceedings{Endrikat:2014:ADS:2568225.2568299,
  author = {Endrikat, Stefan and Hanenberg, Stefan and Robbes, Romain and Stefik, Andreas},
- title = {How Do API Documentation and Static Typing Affect API Usability?},
+ title = {How Do {API} Documentation and Static Typing Affect API Usability?},
  booktitle = {Proceedings of the 36th International Conference on Software Engineering},
  series = {ICSE 2014},
  year = {2014},
@@ -877,7 +860,7 @@ month={Sept},},
 
 @inproceedings{Ellis:2007:FPA:1248820.1248863,
  author = {Ellis, Brian and Stylos, Jeffrey and Myers, Brad},
- title = {The Factory Pattern in API Design: A Usability Evaluation},
+ title = {The Factory Pattern in {API} Design: A Usability Evaluation},
  booktitle = {Proceedings of the 29th International Conference on Software Engineering},
  series = {ICSE '07},
  year = {2007},
@@ -910,7 +893,7 @@ author={Rama,Girish M. and Kak,Avinash},
 
 year={2015},
 
-title={Some structural measures of API usability},
+title={Some structural measures of {API} usability},
 
 journal={Software: Practice and Experience},
 
@@ -937,7 +920,7 @@ and Tscheligi, Manfred",
 editor="Winckler, Marco
 and Forbrig, Peter
 and Bernhaupt, Regina",
-title="Methods towards API Usability: A Structural Analysis of Usability Problem Categories",
+title="Methods towards {API} Usability: A Structural Analysis of Usability Problem Categories",
 bookTitle="Human-Centered Software Engineering: 4th International Conference, HCSE 2012, Toulouse, France, October 29-31, 2012. Proceedings",
 year="2012",
 publisher="Springer Berlin Heidelberg",
@@ -957,7 +940,6 @@ pages = "145 - 162",
 year = "2015",
 note = "",
 issn = "0950-5849",
-url = "http://www.sciencedirect.com/science/article/pii/S0950584915000178",
 author = "Thomas Scheller and Eva Kühn",
 keywords = "\{API\} usability",
 keywords = "API design",
@@ -972,7 +954,7 @@ author={Myers,Brad A. and Jeong,Sae Y. and Xie,Yingyu and Beaton,Jack and Stylos
 
 year={2010},
 
-title={Studying the Documentation of an API for Enterprise Service-Oriented Architecture},
+title={Studying the Documentation of an {API} for Enterprise Service-Oriented Architecture},
 
 journal={Journal of Organizational and End User Computing (JOEUC)},
 
@@ -994,7 +976,7 @@ language={English},
 
 @inproceedings{Farooq:2010:AUP:1753326.1753677,
  author = {Farooq, Umer and Welicki, Leon and Zirkler, Dieter},
- title = {API Usability Peer Reviews: A Method for Evaluating the Usability of Application Programming Interfaces},
+ title = {{API} Usability Peer Reviews: A Method for Evaluating the Usability of Application Programming Interfaces},
  booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
  series = {CHI '10},
  year = {2010},
