Saner and more consisten references

--- a/refs.bib
+++ b/refs.bib
@@ -384,8 +384,7 @@ keywords={application program interfaces;computer science education;software eng
 @inproceedings{Parnin_measuring,
  author = {Parnin, Chris and Treude, Christoph},
  title = {Measuring {API} Documentation on the Web},
- booktitle = {Proceedings of the International Workshop on Web 2.0 for Software Engineering},
- series = {(Web2SE)},
+ booktitle = {Proc. of the International Workshop on Web 2.0 for Software Engineering},
  year = {2011},
  isbn = {978-1-4503-0595-2},
  location = {Waikiki, Honolulu, HI, USA},
@@ -783,8 +782,7 @@ month={July},},
 @inproceedings{Duala-Ekoko:2012:AAQ:2337223.2337255,
  author = {Duala-Ekoko, Ekwa and Robillard, Martin P.},
  title = {Asking and Answering Questions About Unfamiliar {APIs}: An Exploratory Study},
- booktitle = {Proceedings of the 34th International Conference on Software Engineering},
- series = {ICSE '12},
+ booktitle = {Proc. of the International Conference on Software Engineering},
  year = {2012},
  isbn = {978-1-4673-1067-3},
  location = {Zurich, Switzerland},
@@ -792,7 +790,6 @@ month={July},},
  numpages = {11},
  acmid = {2337255},
  publisher = {IEEE Press},
- address = {Piscataway, NJ, USA},
 },
 
 @INPROCEEDINGS{6462686,
@@ -833,20 +830,20 @@ month={Sept},},
 
 @INPROCEEDINGS{5609553,
 author={Seyed Mehdi Nasehi and F. Maurer},
-booktitle={2010 IEEE International Conference on Software Maintenance},
+booktitle={Proc. of International Conference on Software Maintenance},
 title={Unit tests as {API} usage examples},
 year={2010},
 pages={1-10},
 keywords={application program interfaces;program testing;API unit tests;API usage examples;advanced usage scenarios;application programming interface;standard API documentation;Barium;Noise measurement;API;Code Example;Documentation;Unit Test;Usability},
 ISSN={1063-6773},
+publisher = {IEEE},
 month={Sept},},
 
 
 @inproceedings{Endrikat:2014:ADS:2568225.2568299,
  author = {Endrikat, Stefan and Hanenberg, Stefan and Robbes, Romain and Stefik, Andreas},
  title = {How Do {API} Documentation and Static Typing Affect API Usability?},
- booktitle = {Proceedings of the 36th International Conference on Software Engineering},
- series = {ICSE 2014},
+ booktitle = {Proc. of the International Conference on Software Engineering},
  year = {2014},
  isbn = {978-1-4503-2756-5},
  location = {Hyderabad, India},
@@ -854,22 +851,19 @@ month={Sept},},
  numpages = {11},
  acmid = {2568299},
  publisher = {ACM},
- address = {New York, NY, USA},
  keywords = {API Usability, Documentation, Static Type Systems},
 },
 
 @inproceedings{Ellis:2007:FPA:1248820.1248863,
  author = {Ellis, Brian and Stylos, Jeffrey and Myers, Brad},
  title = {The Factory Pattern in {API} Design: A Usability Evaluation},
- booktitle = {Proceedings of the 29th International Conference on Software Engineering},
- series = {ICSE '07},
+ booktitle = {Proc. of International Conference on Software Engineering},
  year = {2007},
  isbn = {0-7695-2828-7},
  pages = {302--312},
  numpages = {11},
  acmid = {1248863},
  publisher = {IEEE Computer Society},
- address = {Washington, DC, USA},
 },
 
 @inproceedings{Kim:2009:AEJ:1747491.1747552,
@@ -977,8 +971,7 @@ language={English},
 @inproceedings{Farooq:2010:AUP:1753326.1753677,
  author = {Farooq, Umer and Welicki, Leon and Zirkler, Dieter},
  title = {{API} Usability Peer Reviews: A Method for Evaluating the Usability of Application Programming Interfaces},
- booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
- series = {CHI '10},
+ booktitle = {Proc. of the SIGCHI Conference on Human Factors in Computing Systems},
  year = {2010},
  isbn = {978-1-60558-929-9},
  location = {Atlanta, Georgia, USA},
@@ -986,6 +979,5 @@ language={English},
  numpages = {10},
  acmid = {1753677},
  publisher = {ACM},
- address = {New York, NY, USA},
  keywords = {api usability, software bugs, usability breakdowns, usability evaluation method (uem), usability inspection},
 }
