back to 8+1 pages

--- a/refs.bib
+++ b/refs.bib
@@ -981,3 +981,16 @@ language={English},
  publisher = {ACM},
  keywords = {api usability, software bugs, usability breakdowns, usability evaluation method (uem), usability inspection},
 }
+
+@ARTICLE{1514443,
+author={D. I. K. Sjoeberg and J. E. Hannay and O. Hansen and V. B. Kampenes and A. Karahasanovic and N. K. Liborg and A. C. Rekdal},
+journal={IEEE Transactions on Software Engineering},
+title={A survey of controlled experiments in software engineering},
+year={2005},
+volume={31},
+number={9},
+pages={733-753},
+keywords={software engineering;controlled experiment survey;scientific articles;software engineering;Application software;Computer Society;Computer industry;Conference proceedings;Programming;Recruitment;Software engineering;Software maintenance;Software metrics;Software systems;Index Terms- Controlled experiments;empirical software engineering.;research methodology;survey},
+doi={10.1109/TSE.2005.97},
+ISSN={0098-5589},
+month={Sept},}
