--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -113,7 +113,7 @@ The WordPress REST API V2 has been published and maintained since May 2015. Befo
   \item Average daily installations: $ \approx 500$.
 \end{itemize}
 
-Starting January 2017, the WordPress REST API V2 is no longer required to be installed as a separate plug-in since it is bundled with every WordPress installation. According to the code repository on GitHub, there are a total of 99 and 46 contributors that had at least one commit to the code repository of the API and its documentation, respectively. These properties satisfy R1, our requirements for using a representative API. By selecting an open-source project we are able to access the source-code to inspect the implementation and documentation technique of the WordPress REST API. The API implements a self-documenting feature where API developers expose API endpoints over HTTP OPTIONS verb to explain the API elements. To implement this feature, the API developers describe the API elements in the code. For example:
+Starting January 2017, the WordPress REST API V2 is no longer required to be installed as a separate plug-in since it is bundled with WordPress installation. According to the code repository, there are a total of 99 and 46 contributors that had at least one commit to the code repository of the API and its documentation, respectively. These properties satisfy R1, our requirements for using a representative API. By selecting an open-source project we are able to access the source-code to inspect the implementation and documentation technique of the WordPress REST API. The API implements a self-documenting feature where API developers expose API endpoints over HTTP OPTIONS verb to explain the API elements. To implement this feature, the API developers describe the API elements in the code. For example:
 
 \lstset{basicstyle=\footnotesize}
 \begin{lstlisting}[language=php,breaklines=true,showspaces=false,showstringspaces=false,numbers=left,xleftmargin=2em,caption={Example of self-documenting API Code in PHP},label=wordpress_code]
@@ -142,7 +142,7 @@ The WordPress team leverages this self-documenting feature to generate and publi
 \begin{center}
 \fbox{\includegraphics[width=\linewidth,keepaspectratio]{schema.png}}
 \end{center}
-\caption{Screenshot showing auto-generated documentation for Post/date}
+\caption{Screenshot of documentation for Post/date}
 \label{fig:schema}
 \end{figure}
 
@@ -186,7 +186,7 @@ To satisfy the requirement of developers with REST API experience (R3), we used 
 
 \begin{itemize}
   \item Currently working as a software engineer.
-  \item At least 1 year of industry experience as a software engineer.
+  \item At least 1 year of industry experience as a developer.
   \item At least 1 year of industry experience with REST APIs.
   \item No prior experience with WordPress REST API.
 \end{itemize}
@@ -421,7 +421,7 @@ Based on these results, we recommend REST API developers to study the usability 
 \fbox{
 \begin{minipage}{0.95\linewidth}
 
-\textbf{Implication 1.} REST API documentation needs to include examples of data types such as Integer, String, and Array for each API field to satisfy API client developer information need.
+\textbf{Recommendation 1.} REST API documentation needs to include examples of data types such as Integer, String, and Array for each API field to satisfy API client developer information need.
 
 \end{minipage}
 }
@@ -437,7 +437,7 @@ Task T5 also required the participants to use an ISO8601 formatted date for publ
 \fbox{
 \begin{minipage}{0.95\linewidth}
 
-\textbf{Implication 2.} REST API developers need to include examples showing the valid data format for the API elements.
+\textbf{Recommendation 2.} REST API developers need to include examples showing the valid data format for the API elements.
 \end{minipage}
 }
 \vspace{0.5mm}
@@ -450,7 +450,7 @@ Task T5 also required the participants to use an ISO8601 formatted date for publ
 \begin{minipage}{0.95\linewidth}
 
 
-\textbf{Implication 3.} If API requests need to use HTTP Request headers, in addition to the request method and body, REST API develpers need to include examples of the HTTP headers.
+\textbf{Recommendation 3.} If API requests need to use HTTP Request headers, in addition to the request method and body, REST API develpers need to include examples of the HTTP headers.
 \end{minipage}
 }
 \vspace{0.5mm}
@@ -462,7 +462,7 @@ Task T5 also required the participants to use an ISO8601 formatted date for publ
 \fbox{
 \begin{minipage}{0.95\linewidth}
 
-\textbf{Implication 4.} If there are prerequisites for making an API call, REST API developers need to provide examples showing how to get the prerequisites in the API documentation.
+\textbf{Recommendation 4.} If there are prerequisites for making an API call, REST API developers need to provide examples showing how to get the prerequisites in the API documentation.
 \end{minipage}
 }
 \vspace{0.5mm}
@@ -493,7 +493,7 @@ Rama et al. presented a set of formulas for computing a measure of API usability
 Nasehi et al. performed a controlled study to understand if API unit tests can be used to provide as usage examples to facilitate API client developers \cite{5609553}. The researchers found that the examples from the unit tests helped understanding the API concepts better but it was challenging for the participants to locate relevant examples. Endrikat et al. performed a controlled study with four groups of participants to understand the impact of API documentation on APIs that are implemented using programming languages with static and dynamic type systems \cite{Endrikat:2014:ADS:2568225.2568299}. Participants were given a set of failing unit tests and were asked to make them pass by writing code using the studied API. They found that the participant group using a statically typed API with explicit documentation could get the tests to pass in less time than the other groups. Ellis et al. performed a controlled study with two groups of developers to understand the impact of using a constructor vs. a factory method design pattern on API client development time \cite{Ellis:2007:FPA:1248820.1248863}. They found that API client developers needed more time to complete API tasks using factory method compared to using a constructor. Our work in this paper is based on a controlled study and shares part of the setup that were used by the aforementioned controlled studies with the following differences: our goal is to understand the obstacles faced by API client developers without usage examples;  we focus on REST APIs instead of local APIs; and, the participants are all professional software engineers.
 
 \section{Conclusion}
-In this paper, we presented a set of problems that experienced REST API client developers face while performing API tasks using API documentation that lacks usage examples. We identified that, without examples, REST API client developers have trouble using the correct data types, correct data formats, and required HTTP headers and request body. We've also presented empirical evidence that by adding usage examples makes it possible to reduce mistakes, improve success rate and developer satisfaction of using the API. Practitioners can follow our implications as a set of guidelines while documenting REST APIs to improve API usability.
+In this paper, we presented a set of problems that experienced REST API client developers face while performing API tasks using API documentation that lacks usage examples. We identified that, without examples, REST API client developers have trouble using the correct data types, correct data formats, and required HTTP headers and request body. We've also presented empirical evidence that by adding usage examples makes it possible to reduce mistakes, improve success rate and developer satisfaction of using the API. Practitioners can follow our recommendation as a set of guidelines while documenting REST APIs to improve API usability.
 
 \section*{Acknowledgment}
 We are grateful to our participants for their valuable time on this study. We thank the University of Calgary for funding this research.
